apps/multimedia/manifests/transmission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: transmission
    app.kubernetes.io/version: 5.3.0
  name: transmission
  namespace: multimedia
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: transmission
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: transmission
      labels:
        app.kubernetes.io/name: transmission
        app.kubernetes.io/version: 5.3.0
    spec:
      containers:
        - env:
            - name: TRANSMISSION_ADDR
              value: http://127.0.0.1:9091
          image: metalmatze/transmission-exporter:master
          imagePullPolicy: Always
          name: exporter
          ports:
            - containerPort: 19091
              name: metrics
          resources:
            limits:
              memory: 20Mi
            requests:
              memory: 11Mi
        - envFrom:
            - configMapRef:
                name: transmission-config
                optional: false
            - secretRef:
                name: transmission-vpn-creds
                optional: false
          image: haugene/transmission-openvpn:5.4.0
          name: transmission
          ports:
            - containerPort: 9091
              name: http-api
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 10
            tcpSocket:
              port: http-api
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - mountPath: /config
              name: transmission-config
            - mountPath: /download
              name: data
      dnsConfig:
        nameservers:
          - 1.1.1.1
          - 1.0.0.1
      dnsPolicy: None
      restartPolicy: Always
      securityContext:
        sysctls:
          - name: net.ipv4.tcp_adv_win_scale
            value: "4"
      tolerations: []
      volumes:
        - name: transmission-config
          persistentVolumeClaim:
            claimName: transmission-config
        - name: data
          persistentVolumeClaim:
            claimName: downloads
