apps/multimedia/manifests/transmission/02_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: default
    metallb.universe.tf/allow-shared-ip: multimedia-svc
  labels:
    app.kubernetes.io/name: transmission
  name: transmission-ui
  namespace: multimedia
spec:
  externalTrafficPolicy: Cluster
  loadBalancerIP: 192.168.2.95
  ports:
  - port: 9091
    protocol: TCP
    targetPort: http-api
  selector:
    app.kubernetes.io/name: transmission
  sessionAffinity: None
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: transmission
  name: transmission-metrics
  namespace: multimedia
spec:
  ports:
  - name: metrics
    port: 19091
    protocol: TCP
    targetPort: metrics
  selector:
    app.kubernetes.io/name: transmission
