apps/multimedia/manifests/transmission/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    reloader.homer/group: Multimedia
    reloader.homer/logo: https://avatars3.githubusercontent.com/u/223312?s=200&v=4
    reloader.homer/name: Transmission
    reloader.homer/subtitle: Downloader
    reloader.homer/tag: local
  labels:
    reloader.homer/enabled: "true"
    traefik.http.middlewares.add-foo.addprefix.prefix: "/transmission/web"
  name: downloader
  namespace: multimedia
spec:
  ingressClassName: private
  rules:
    - host: downloader.ankhmorpork.thaum.xyz
      http:
        paths:
          - backend:
              service:
                name: transmission
                port:
                  number: 9091
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - downloader.ankhmorpork.thaum.xyz
      secretName: downloader-ankhmorpork-thaum-xyz-tls
